added responsive behaviour

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -20,3 +20,26 @@
         is available on the Google Play Store and Apple App Store.
     </h5>
 </div>
+
+<div class="container-fluid sub-heading bg-dark mt-5 ">
+    <h2 class="text-white text-center">Meet Team CineHolic</h2>
+  </div>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <img class="founder-img" src = {{sabu}} alt="sabarna">
+            <h6 class="text-white">Sabarna Choudhury</h6>
+            <p class="text-small">Co-Founder</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <img class="founder-img" src = {{medha}} alt="medhashree">
+            <h6 class="text-white">Medhashree Moshat</h6>
+            <p class="text-small">Co-Founder</p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <img class="founder-img" src = {{udit}} alt="udit">
+            <h6 class="text-white ml-5">Udit Singhal</h6>
+            <p class="text-small ml-5">Co-Founder</p>
+        </div>
+    </div>
+</div>
