--- a/src/app/homepage-navbar/homepage-navbar.component.html
+++ b/src/app/homepage-navbar/homepage-navbar.component.html
@@ -89,7 +89,7 @@ Genre
 
     <div>
       <ul class="navbar-nav mr-auto">
-        <li class="btn-search mr-2">
+        <li class="btn-search mr-2 cart">
           <button class="btn btn-outline-secondary btn-cart">
             <a routerLink="/cart">
               <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart-plus cart" fill="currentColor"
@@ -105,7 +105,7 @@ Genre
           </button>
         </li>
 
-        <li class="btn-search mr-2">
+        <li class="btn-search mr-2 search">
           <button class="btn btn-light">
             <a routerLink="/search">
               <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor"
@@ -119,7 +119,7 @@ Genre
           </button>
         </li>
 
-        <li class="nav-item">
+        <li class="nav-item contact_us">
           <a class="nav-link" routerLink="/contact">
             Contact Us
           </a>
