--- a/src/app/initial-login-page/advertisement1/advertisement1.component.html
+++ b/src/app/initial-login-page/advertisement1/advertisement1.component.html
@@ -22,10 +22,10 @@
     </div>
     <div class="adv-text-top">
         <h1>Explore the Movie World</h1>
-        <p>Search any movie from different region across the globe.</p>
-        <p>Exclusively in CineHolic</p>
+        <p class="para">Search any movie from different region across the globe.</p>
+        <p class="para">Exclusively in CineHolic</p>
         <div class="adv-btn-div">
-            <button type="button" class="btn btn-info adv-btn mt-4" [routerLink]="['signup']">Get Started</button>
+            <button type="button" class="btn btn-info adv-btn mt-4 get_started" [routerLink]="['signup']">Get Started</button>
         </div>
     </div>
 </div>
