--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -26,3 +26,24 @@
     animation: shakeX;
     animation-duration: 1s;
 }
+
+.card-img{
+    max-width: 15rem; 
+    max-height: 15rem;
+}
+
+@media only screen and (max-width:1024px){
+    .footer1{
+        display:none;
+    }
+    .card-img{
+        max-width: 30rem; 
+        max-height: 30rem;
+    }
+}
+
+@media only screen and (min-width:1024px){
+    .footer2{
+        display:none;
+    }
+}
