--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -27,8 +27,7 @@
                 <div class="card text-white bg-secondary mb-3" *ngFor="let movie of arrMovie; let i=index">
                     <div class="row no-gutters">
                         <div class="col-md-4">
-                            <img [src]="movie.Poster" class="card-img" alt="movie.Title"
-                                style="max-width: 15rem; max-height: 15rem;">
+                            <img [src]="movie.Poster" class="card-img" alt="movie.Title">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body sellerTag">
@@ -88,4 +87,20 @@
 
 </div>
 
-<homepage-footer></homepage-footer>
+<div class="footer1"><homepage-footer></homepage-footer></div>
+<div class="footer2">
+  <footer>
+    <div class="bg-dark foot-space">
+        <h3 class="text-center text-white">Cineholic</h3>
+        <div class="text-center">
+            <ul class="footer-ul">
+                <a href="#"><li class="footer-li">Terms and Privacy Notice</li></a>
+                <a href="#"><li class="footer-li">Send us feedback</li></a>
+                <a href="#"><li class="footer-li">Help</li></a>
+                <li class="text-white footer-li">&#169; 1996-2020, Cineholic.com, Inc. or its affiliates</li>
+            </ul>
+        </div>
+    </div>
+</footer>
+</div>
+
