--- a/src/app/coming-soon/coming-soon.component.css
+++ b/src/app/coming-soon/coming-soon.component.css
@@ -60,3 +60,15 @@
 .love{
     color:red;
 }
+
+@media only screen and (max-width:1024px){
+    .footer1,.page-heading,.carousel{
+        display:none;
+    }
+}
+
+@media only screen and (min-width:1024px){
+    .footer2{
+        display:none;
+    }
+}
