--- a/src/app/favourite/favourite.component.css
+++ b/src/app/favourite/favourite.component.css
@@ -67,3 +67,15 @@
 .love{
     color:red;
 }
+
+@media only screen and (max-width:1024px){
+    .footer1{
+        display:none;
+    }
+}
+
+@media only screen and (min-width:1024px){
+    .footer2{
+        display:none;
+    }
+}
