--- a/src/app/hollywood/hollywood.component.css
+++ b/src/app/hollywood/hollywood.component.css
@@ -64,3 +64,15 @@
 .hollywood{
     margin-top:5%;
 }
+
+@media only screen and (max-width:1024px){
+    .footer1{
+        display:none;
+    }
+}
+
+@media only screen and (min-width:1024px){
+    .footer2{
+        display:none;
+    }
+}
