--- a/src/app/nav-options/nav-options.component.css
+++ b/src/app/nav-options/nav-options.component.css
@@ -14,3 +14,9 @@ ul{
 .nav{
     padding-top:4rem;
 }
+
+@media only screen and (min-width:1024px){
+    .search-block{
+        display:none;
+    }
+}
