--- a/src/app/trending/trending.component.html
+++ b/src/app/trending/trending.component.html
@@ -1,10 +1,10 @@
 <homepage-navbar></homepage-navbar>
 <nav-options></nav-options>
 <div class="trending">
-  <div class="container-fluid sub-heading bg-dark">
+  <div class="container-fluid sub-heading bg-dark page-heading">
     <h2 class="text-white">Trending</h2>
   </div>
-  <div class="container-fluid my-3" style="padding-bottom: 30px; width:800px">
+  <div class="container-fluid my-3 carousel" style="padding-bottom: 30px; width:800px">
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li *ngFor="let movie of trendingMovies ; let i = index " data-target="#carouselExampleCaptions"
@@ -39,13 +39,13 @@
 
   <!--Hollywood Trending-->
   <div>
-    <div class="container-fluid sub-heading bg-dark" style="margin-top: 100px;">
+    <div class="container-fluid sub-heading bg-dark heading" >
       <h2 class="text-white">Hollywood</h2>
     </div>
     <owl-carousel-o [options]="customOptions">
       <ng-template carouselSlide *ngFor="let movie of trendingHollywood">
-        <div class="card-wrap">
-          <div class="card my-4 mx-4" style="height: 500px;">
+        <div class="card-wrap movie-card">
+          <div class="card my-4 mx-4  " style="height: 500px;">
             <img [src]="movie['Poster']" style="height: 300px;" class="card-img-top" alt="{{movie.Title}}">
             <div class="card-body">
               <h4 class="text-white">{{movie.Title}}</h4>
@@ -163,5 +163,19 @@
 </div>
 
 
-
-<homepage-footer></homepage-footer>
+<div class="footer1"><homepage-footer></homepage-footer></div>
+<div class="footer2">
+  <footer>
+    <div class="bg-dark foot-space">
+        <h3 class="text-center text-white">Cineholic</h3>
+        <div class="text-center">
+            <ul class="footer-ul">
+                <a href="#"><li class="footer-li">Terms and Privacy Notice</li></a>
+                <a href="#"><li class="footer-li">Send us feedback</li></a>
+                <a href="#"><li class="footer-li">Help</li></a>
+                <li class="text-white footer-li">&#169; 1996-2020, Cineholic.com, Inc. or its affiliates</li>
+            </ul>
+        </div>
+    </div>
+</footer>
+</div>
