--- a/src/app/profile-page/profile-page.component.html
+++ b/src/app/profile-page/profile-page.component.html
@@ -9,12 +9,12 @@
       </nav>
       <div class="container bg-dark container-size">
           <div class="row mt-5" style="padding-left: 50px;">
-              <div class="col-lg-3 col-md-4 col-sm-6">
+              <div class="col-lg-3 col-md-4 col-12 profile-icon">
                 <img class="user-image" src="https://w7.pngwing.com/pngs/749/820/png-transparent-computer-icons-black-white-people-critical-illness-miscellaneous-people-black.png" alt="UserName" style="border-radius: 50%;">
-                <h6 class="text-white ml-5 mt-2">{{currentUser.firstname}} {{currentUser.lastname}}</h6>
-                <p class="ml-5"><small class="text-white">{{currentUser.email}}</small></p>
+                <h6 class="text-white mt-2">{{currentUser.firstname}} {{currentUser.lastname}}</h6>
+                <p><small class="text-white">{{currentUser.email}}</small></p>
                </div>
-              <div class="col-lg-9 col-md-8 col-sm-6">
+              <div class="col-lg-9 col-md-8 col-12">
                 <table>
                   <tr>
                      <h5 class="text-white mr-3 mt-1">First Name</h5>
