--- a/src/app/bollywood/bollywood.component.css
+++ b/src/app/bollywood/bollywood.component.css
@@ -69,6 +69,9 @@
     .footer1{
         display:none;
     }
+    .bollywood{
+        margin-top:15%;
+    }
 }
 
 @media only screen and (min-width:1024px){
